--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -296,7 +296,7 @@
                       redor."
                     </p>
                     <span>
-                      Letícia Yokoi
+                      Federico
                     </span>
                   </div>
                 </div>
@@ -312,7 +312,7 @@
                       inesquecível."
                     </p>
                     <span>
-                      João Diogo Brites
+                      Vanina
                     </span>
                   </div>
                 </div>
@@ -327,7 +327,7 @@
                       quanto pessoalmente. Meu ano lá foi um divisor de águas na minha carreira e pra pessoa que sou hoje!"
                     </p>
                     <span>
-                      Amanda Peconick
+                      John
                     </span>
                   </div>
                 </div>
