style(*): change images url and style element

--- a/src/app/landing-footer/landing-footer.component.scss
+++ b/src/app/landing-footer/landing-footer.component.scss
@@ -216,6 +216,7 @@ footer {
     a:hover {
         color: $white;
         text-decoration: none;
+        cursor: pointer;
     }
     a:hover {
         font-weight: bold;
