--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1569,7 +1569,7 @@ label {
     width: 100%;
     height: 150px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     @at-root :host-context(.no-webp) #{&} {
         background-image: url('/assets/images/logo-empreendedor-global.png');
