--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1783,7 +1783,7 @@ label {
     width: 100%;
     height: 150px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     @at-root :host-context(.no-webp) #{&} {
         background-image: url('/assets/images/logo-voluntario-global.png');
