--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -14,7 +14,8 @@
           </div>
           <ul id="menu">
             <li>
-              <span i18n="@@makeAnExchange">Faça um intercâmbio</span>
+              <span i18n="@@makeAnExchange">Faça um intercâmbio </span>
+              <i class="fas fa-chevron-down"></i>
               <ul class="animated fadeIn faster ul-products">
                 <li (click)="goToGv()" i18n="@@globalVolunteer">
                   Voluntário Global
@@ -25,12 +26,18 @@
                 <li (click)="goToGt()" i18n="@@globalTalent">
                   Talento Global
                 </li>
+                <a href="https://aiesecargentina.org/casas-globales-viejo/">
+                  <li>
+                    Casas Globales
+                  </li>
+                </a>
               </ul>
             </li>
             <li>
-              <span i18n="@@becomeOurPartner">Seja nosso Parceiro</span>
+              <span i18n="@@becomeOurPartner">Seja nosso Parceiro </span>
+              <i class="fas fa-angle-down"></i>
               <ul class="animated fadeIn faster ul-partners">
-                <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
+                <a href="https://aiesecargentina.org/ongs/">
                   <li i18n="@@ong">
                     ONG
                   </li>
@@ -48,46 +55,52 @@
               </li>
             </a>
             <li>
-              <span>Blog</span>
-              <ul class="animated fadeIn faster ul-partners">
-                <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
+              <span>Blog </span>
+              <i class="fas fa-chevron-down"></i>
+              <ul class="animated fadeIn faster ul-blog">
+                <a href="https://aiesecargentina.org/voluntarios-en-el-exterior/">
+                  <li>
+                    Voluntarios en el exterior
+                  </li>
+                </a>
+                <a href="https://aiesecargentina.org/historias-de-emprendedores/">
                   <li>
                     Historias de Emprendedores
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="https://aiesecargentina.org/historias-de-liderazgo/">
                   <li>
                     Historias de liderazgo
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="https://aiesecargentina.org/historias-de-casas-globales/">
                   <li>
                     Historias de Casas Globales
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="https://aiesecargentina.org/propositoymotivacion/">
                   <li>
-                    Propósito y Motivación 
+                    Propósito y Motivación
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="https://aiesecargentina.org/educacion/">
                   <li>
                     Educación
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="https://aiesecargentina.org/blog/talento-por-el-mundo/">
                   <li>
                     Talento por el mundo
                   </li>
                 </a>
               </ul>
             </li>
-            <a href="http://blog.aiesec.org.br/youthspeak/">
+            <a href="https://aiesecargentina.org/youth-speak/">
               <li i18n="@@youthspeak">
                 Youthspeak
               </li>
             </a>
-            <a href="http://blog.aiesec.org.br/contato/">
+            <a href="https://aiesecargentina.org/contactanos/">
               <li i18n="@@contact">
                 Contato
               </li>
@@ -113,7 +126,7 @@
             <li>
               <span i18n="@@becomeOurPartner">Seja nosso Parceiro</span>
               <ul class="animated fadeIn faster">
-                <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
+                <a href="https://aiesecargentina.org/ongs/">
                   <li i18n="@@ong">
                     ONG
                   </li>
@@ -130,16 +143,56 @@
                 <span>Sé Miembro</span>
               </li>
             </a>
-            <a href="http://blog.aiesec.org.br/youthspeak/">
+            <a href="https://aiesecargentina.org/youth-speak/">
               <li>
                 <span i18n="@@youthspeak">Youthspeak</span>
               </li>
             </a>
-            <a href="http://blog.aiesec.org.br/contato/">
+            <a href="https://aiesecargentina.org/contactanos/">
               <li>
                 <span i18n="@@contact">Contato</span>
               </li>
             </a>
+            <li>
+              <span>Blog</span>
+              <ul class="animated fadeIn faster">
+                <a href="https://aiesecargentina.org/voluntarios-en-el-exterior/">
+                  <li>
+                    Voluntarios en el exterior
+                  </li>
+                </a>
+                <a href="https://aiesecargentina.org/historias-de-emprendedores/">
+                  <li>
+                    Historias de Emprendedores
+                  </li>
+                </a>
+                <a href="https://aiesecargentina.org/historias-de-liderazgo/">
+                  <li>
+                    Historias de liderazgo
+                  </li>
+                </a>
+                <a href="https://aiesecargentina.org/historias-de-casas-globales/">
+                  <li>
+                    Historias de Casas Globales
+                  </li>
+                </a>
+                <a href="https://aiesecargentina.org/propositoymotivacion/">
+                  <li>
+                    Propósito y Motivación
+                  </li>
+                </a>
+                <a href="https://aiesecargentina.org/educacion/">
+                  <li>
+                    Educación
+                  </li>
+                </a>
+                <a href="https://aiesecargentina.org/blog/talento-por-el-mundo/">
+                  <li>
+                    Talento por el mundo
+                  </li>
+                </a>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
