fix(menu and thank you page): links fixed and menu items added

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -42,7 +42,7 @@
                     ONG
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="https://aiesecargentina.org/startups-2/">
                   <li i18n="@@companies">
                     Empresas
                   </li>
@@ -121,6 +121,11 @@
                 <li (click)="goToGt()" [ngx-scroll-to]="'#header-product'" i18n="@@globalTalent">
                   Talento Global
                 </li>
+                <a href="https://aiesecargentina.org/casas-globales-viejo/">
+                  <li>
+                    Casas Globales
+                  </li>
+                </a>
               </ul>
             </li>
             <li>
@@ -131,7 +136,7 @@
                     ONG
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
+                <a href="https://aiesecargentina.org/startups-2/">
                   <li i18n="@@companies">
                     Empresas
                   </li>
@@ -141,16 +146,6 @@
             <a href="https://aiesecargentina.org/sumate/">
               <li>
                 <span>Sé Miembro</span>
-              </li>
-            </a>
-            <a href="https://aiesecargentina.org/youth-speak/">
-              <li>
-                <span i18n="@@youthspeak">Youthspeak</span>
-              </li>
-            </a>
-            <a href="https://aiesecargentina.org/contactanos/">
-              <li>
-                <span i18n="@@contact">Contato</span>
               </li>
             </a>
             <li>
@@ -193,6 +188,16 @@
                 </a>
               </ul>
             </li>
+            <a href="https://aiesecargentina.org/youth-speak/">
+              <li>
+                <span i18n="@@youthspeak">Youthspeak</span>
+              </li>
+            </a>
+            <a href="https://aiesecargentina.org/contactanos/">
+              <li>
+                <span i18n="@@contact">Contato</span>
+              </li>
+            </a>
           </ul>
         </div>
       </div>
