--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -248,7 +248,7 @@
                         <div class="styled-select">
                           <p-autoComplete [(ngModel)]="user.university" [suggestions]="universities" (completeMethod)="searchUnivesity($event)" #universityAutocomplete
                             (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick();" dropdownMode="current"
-                            field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="Onde você estuda?"></p-autoComplete>
+                            field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="Digite aqui onde você estuda"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')" *ngIf="user.university"></i>
                         </div>
                       </div>
