--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -333,7 +333,7 @@
                       </div>
                     </div>
                     <div class="label-experience">
-                      <span i18n="@@whenCanTravelAvailable">Escolha o período de tempo que você estará disponível</span> {{user.when_can_travel.id}}
+                      <span i18n="@@whenCanTravelAvailable">Escolha o período de tempo que você estará disponível</span>
                     </div>
                   </div>
                   <div class="form-checkbox-select">
