--- a/src/app/landing-footer/landing-footer.component.scss
+++ b/src/app/landing-footer/landing-footer.component.scss
@@ -72,7 +72,7 @@ $break-sm: 576px;
             overflow: hidden;
             .footer-carousel-wrapper {
                 height: 100%;
-                width: 300%;
+                width: 400%;
                 position: absolute;
                 left: 0;
                 top: 0;
@@ -313,9 +313,13 @@ footer {
         #footer-carousel {
             .footer-carousel-partners {
                 .footer-carousel-wrapper {
-                    width: 500%;
-                    .footer-each-item span {
-                        bottom: -25px !important;
+                    width: 530%;
+                    .footer-each-item {
+                        background-size: 85%;
+                        margin: 10px .75%;
+                        span {
+                            bottom: -25px !important;
+                        }
                     }
                 }
             }
