fix(offline): cellphone mask fixed

--- a/src/app/form-offline/form-offline.component.html
+++ b/src/app/form-offline/form-offline.component.html
@@ -64,7 +64,7 @@
                     <div class="dropdown desktop">
                       <div class="styled-select">
                         <select [(ngModel)]="user.program" formControlName="program" name="program">
-                          <option value="">Que programa deseas ingresas?</option>
+                          <option value="">Que programa deseas ingresar?</option>
                           <option value="0">Voluntario Global</option>
                           <option value="1">Talento Global</option>
                           <option value="2">Emprendedor Global</option>
