fix(landing-footer, landing-page-menu): changed links + typo fix
ARG-42 - https://devmagic.atlassian.net/browse/ARG-42

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -57,7 +57,7 @@
               <a (click)="goToGt()" i18n='@@globalTalent'>Talento Global</a>
             </p>
             <p>
-              <a href="https://aiesecargentina.org/casas-globales-viejo/">Casas Globales</a>
+              <a href="http://bit.ly/AIESECArgentinaCasasGlobales">Casas Globales</a>
             </p>
           </div>
           <div class="footer-group-links col-md-4 col-sm-6">
@@ -71,10 +71,10 @@
           </div>
           <div class="footer-group-links col-md-4 col-sm-6 desktop">
             <p class="semibold footer-link-title desktop">
-              <a href="https://aiesecargentina.org/sumate/">Sé miembro</a>
+              <a href="http://bit.ly/AIESECArgentinaSumate">Sé miembro</a>
             </p>
             <p class="semibold footer-link-title mobile">
-              <a href="https://aiesecargentina.org/sumate/">Sé miembro</a>
+              <a href="http://bit.ly/AIESECArgentinaSumate">Sé miembro</a>
             </p>
           </div>
         </div>
