--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -26,7 +26,7 @@
                 <li (click)="goToGt()" i18n="@@globalTalent">
                   Talento Global
                 </li>
-                <a href="https://aiesecargentina.org/casas-globales-viejo/">
+                <a href="http://bit.ly/AIESECArgentinaCasasGlobales">
                   <li>
                     Casas Globales
                   </li>
@@ -49,7 +49,7 @@
                 </a>
               </ul>
             </li>
-            <a href="https://aiesecargentina.org/sumate/">
+            <a href="http://bit.ly/AIESECArgentinaSumate">
               <li>
                 <span>Sé Miembro</span>
               </li>
@@ -121,7 +121,7 @@
                 <li (click)="goToGt()" [ngx-scroll-to]="'#header-product'" i18n="@@globalTalent">
                   Talento Global
                 </li>
-                <a href="https://aiesecargentina.org/casas-globales-viejo/">
+                <a href="http://bit.ly/AIESECArgentinaCasasGlobales">
                   <li>
                     Casas Globales
                   </li>
@@ -143,7 +143,7 @@
                 </a>
               </ul>
             </li>
-            <a href="https://aiesecargentina.org/sumate/">
+            <a href="http://bit.ly/AIESECArgentinaSumate">
               <li>
                 <span>Sé Miembro</span>
               </li>
