chore(landing-page-menu): removed airtickets link
AIESEC-264 - https://devmagic.atlassian.net/browse/AIESEC-264

--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -200,8 +200,11 @@ ul#menu {
                         &.ul-products {
                             bottom: -85px;
                         }
-                        &.ul-partners, &.ul-blog, &.ul-travel {
+                        &.ul-partners, &.ul-blog {
                             bottom: -35px;
+                        }
+                        &.ul-travel {
+                            bottom: -5px;
                         }
                         a:hover {
                             text-decoration: none;
