--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1729,3 +1729,16 @@ label.input-terms-label {
        }
     }
 }
+
+.select-without-background {
+    background-color: transparent;
+    border: 0;
+    color: #fff;
+    width: 100%;
+    font-style: initial;
+    option {
+        color: grey;    
+        font-size: 16px;
+        font-style: initial;
+    }
+}
