--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -391,7 +391,24 @@
                     </div>
                   </div>
                 </div>
-            
+                <div class="form-group getToKnow">
+                  <div class="input-group select-dropdown">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <span i18n='@@referralType'>Como conheceu a AIESEC?</span>
+                      </div>
+                    </div>
+                    <div class="dropdown">
+                      <select required [(ngModel)]='user.referral_type' name='referral_type' formControlName='referral_type' class='select-without-background'>
+                        <option value='' i18n='@@referralTypeOption'> Selecione uma opção </option>
+                        <option *ngFor='let option of referralType' [ngValue]='option.id'> {{ option.value }}</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div *ngIf="isValidStudy('referral_type')" class='error-message'>
+                    Por favor, selecione um valor
+                  </div>
+                </div>
                 <!-- Terms -->
                 <div class="row justify-content-center forms-term autocomplete-negative-index2">
                   <div class="col-sm-10">
