fix(landing-page-menu): added 'Câmbio de Moedas' link
AIESEC-286 - https://devmagic.atlassian.net/browse/AIESEC-286

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -70,6 +70,11 @@
             <li>
               Planeje sua viagem
               <ul class="animated fadeIn faster ul-travel">
+                <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h">
+                  <li>
+                    Câmbio de Moedas
+                  </li>
+                </a>
                 <a href="https://www.assistcard.com/br/b2c/aiesec-br">
                   <li>
                     Seguro Viagem
@@ -143,6 +148,11 @@
             <li>
               <span>Planeje sua viagem</span>
               <ul class="animated fadeIn faster">
+                <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h">
+                  <li>
+                    Câmbio de Moedas
+                  </li>
+                </a>
                 <a href="https://www.assistcard.com/br/b2c/aiesec-br">
                   <li>
                     Seguro Viagem
