--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -200,11 +200,8 @@ ul#menu {
                         &.ul-products {
                             bottom: -85px;
                         }
-                        &.ul-partners, &.ul-blog {
+                        &.ul-partners, &.ul-blog, &.ul-travel {
                             bottom: -35px;
-                        }
-                        &.ul-travel {
-                            bottom: -5px;
                         }
                         a:hover {
                             text-decoration: none;
