--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -70,6 +70,11 @@
             <li>
               Planeje sua viagem
               <ul class="animated fadeIn faster ul-travel">
+                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower">
+                  <li>
+                    Passagens Aéreas
+                  </li>
+                </a>
                 <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h">
                   <li>
                     Câmbio de Moedas
@@ -148,6 +153,11 @@
             <li>
               <span>Planeje sua viagem</span>
               <ul class="animated fadeIn faster">
+                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower">
+                  <li>
+                    Passagens Aéreas
+                  </li>
+                </a>
                 <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h">
                   <li>
                     Câmbio de Moedas
