fix(gv embedded): margin added and button 'cancelar' removed

--- a/src/app/form-gv-embedded/form-gv-embedded.component.scss
+++ b/src/app/form-gv-embedded/form-gv-embedded.component.scss
@@ -534,7 +534,9 @@ strong {
 /*--------------------------------------------------------------
       Header
   --------------------------------------------------------------*/
-
+.header {
+    margin-bottom: 30px;
+}
 section.header h1 {
     max-width: 60%;
     margin: auto;
