--- a/src/app/form-gt-embedded/form-gt-embedded.component.scss
+++ b/src/app/form-gt-embedded/form-gt-embedded.component.scss
@@ -495,7 +495,9 @@ strong {
 /*--------------------------------------------------------------
       Header
   --------------------------------------------------------------*/
-
+.header {
+    margin-bottom: 30px;
+}
 section.header h1 {
     max-width: 60%;
     margin: auto;
