--- a/src/app/form-ge-embedded/form-ge-embedded.component.scss
+++ b/src/app/form-ge-embedded/form-ge-embedded.component.scss
@@ -505,7 +505,9 @@ strong {
 /*--------------------------------------------------------------
       Header
   --------------------------------------------------------------*/
-
+.header {
+    margin-bottom: 30px;
+}
 section.header h1 {
     max-width: 60%;
     margin: auto;
